# goal

goal/: .nautilus-metafile.xml  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  goal.desktop  goal.schemas  mkinstalldirs
goal/intl/: Makefile
goal/macros/: Makefile  Makefile.in
goal/pixmaps/: Makefile  Makefile.am  Makefile.in
goal/pixmaps/green/: Makefile.am
goal/po/: ChangeLog  POTFILES.in
goal/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  game.c  game.h  helpers.c  helpers.h  main.c  property.c  property.h  typedefs.h
goal/src/.deps/: callbacks.P  helpers.P  main.P
