dnl Goal - 2001 Dietze Sebastian

AC_INIT(src/main.c)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(goal, 0.2)

AM_MAINTAINER_MODE

AM_ACLOCAL_INCLUDE(macros)

GNOME_INIT

AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC


GNOME_COMPILE_WARNINGS

dnl GDK Pixbuf
AM_PATH_GDK_PIXBUF(0.9.0, ,AC_MSG_ERROR([Need gdk-pixbuf-0.9.0 or later!]))
EXTRA_GNOME_CFLAGS=`gnome-config --cflags gdk_pixbuf gnomecanvaspixbuf gdk_pixbuf_xlib libart`
EXTRA_GNOME_LIBS=`gnome-config --libs gdk_pixbuf gnomecanvaspixbuf gdk_pixbuf_xlib libart`
AC_SUBST(EXTRA_GNOME_CFLAGS)
AC_SUBST(EXTRA_GNOME_LIBS)


dnl i18n, l10n stuff
ALL_LINGUAS=""
dnl AM_GNU_GETTEXT
AM_GNOME_GETTEXT

AC_OUTPUT([
Makefile
macros/Makefile
intl/Makefile
pixmaps/Makefile
pixmaps/green/Makefile
src/Makefile
po/Makefile.in
])
