dnl Goal - 2001 Dietze Sebastian

AC_INIT(goal,0.3,https://developer.berlios.de/bugs/?group_id=218)
AC_CONFIG_SRCDIR(src/main.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME,AC_PACKAGE_VERSION)
AM_MAINTAINER_MODE
             
AC_PROG_CC
AC_ISC_POSIX
AC_HEADER_STDC

pkg_modules="libgnomeui-2.0 libgnomecanvas-2.0 glib-2.0 gdk-pixbuf-xlib-2.0 gnome-desktop-2.0 libart-2.0 libgnome-2.0 gdk-x11-2.0"
PKG_CHECK_MODULES(EXTRA_GNOME, [$pkg_modules])
AC_SUBST(EXTRA_GNOME_CFLAGS)
AC_SUBST(EXTRA_GNOME_LIBS)
               

dnl GETTEXT i18n, l10n
GETTEXT_PACKAGE=goal
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
pixmaps/Makefile
pixmaps/green/Makefile
src/Makefile
po/Makefile.in
])
