pixmapdir = $(datadir)/goal/green

pixmap_DATA = \
	piece_empty.png \
	piece_empty_negativ.png \
	piece_empty_positiv.png \
	piece_marked.png \
	piece_negativ.png \
	piece_normal.png \
	piece_touched.png \
	wallpaper.png

EXTRA_DIST = \
	piece_empty.png \
	piece_empty_negativ.png \
	piece_empty_positiv.png \
	piece_marked.png \
	piece_negativ.png \
	piece_normal.png \
	piece_touched.png \
	wallpaper.png

